# splash

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS.md  Authors.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code_of_conduct.md  Contributing.md  INSTALL  Makefile.am  NEWS  NEWS.md  News.md  OSX_install.txt  README  README.md  autogen.sh  build_osx.sh  configure.ac  make_deps.sh
addons/blender/: CMakeLists.txt  Makefile.am
data/: CMakeLists.txt  Makefile.am  config.json  gphoto.json  repl.json  splash.json  templates.txt  twoScenes.json  writeToShmdata.sh
data/assets/: icon_splash.blend  template_images.blend
data/config/: realtime.conf  splash-launcher.desktop  splashrc
data/package/: org.splash.Splash.json
data/shaders/: geometric_calibration_filter.frag
data/templates/: Makefile.am  dual_dome.json  four_plane.json  single_dome.json  single_plane.json  two_scenes_four_cameras.json
osx/: CMakeLists.txt  Info.plist.in  Makefile.am
src/: CMakeLists.txt  Makefile.am  attribute.cpp  base_object.cpp  basetypes.cpp  buffer_object.cpp  camera.cpp  cgUtils.cpp  colorcalibrator.cpp  config.h.cmake  controller.cpp  controller_blender.cpp  controller_gui.cpp  controller_httpServer.cpp  controller_pythonEmbedded.cpp  factory.cpp  filter.cpp  framebuffer.cpp  geometry.cpp  gpuBuffer.cpp  gui.cpp  httpServer.cpp  image.cpp  imageBuffer.cpp  image_ffmpeg.cpp  image_gphoto.cpp  image_opencv.cpp  image_shmdata.cpp  image_v4l2.cpp  link.cpp  listener.cpp  log.cpp  ltcclock.cpp  mesh.cpp  mesh_bezierPatch.cpp  mesh_shmdata.cpp  object.cpp  queue.cpp  root_object.cpp  scene.cpp  (+39 more)
src/controller/: colorcalibrator.cpp  colorcalibrator.h  controller.cpp  controller.h  controller_blender.cpp  controller_blender.h  controller_gui.cpp  controller_gui.h  controller_pythonembedded.cpp  controller_pythonembedded.h  geometriccalibrator.cpp  geometriccalibrator.h  texcoordgenerator.cpp  texcoordgenerator.h
src/core/: attribute.cpp  attribute.h  base_object.cpp  base_object.h  buffer_object.cpp  buffer_object.h  constants.h  coretypes.h  factory.cpp  factory.h  graph_object.cpp  graph_object.h  imagebuffer.cpp  imagebuffer.h  link.cpp  link.h  name_registry.cpp  name_registry.h  resizable_array.h  root_object.cpp  root_object.h  scene.cpp  scene.h  serialized_object.h  serializer.h  spinlock.h  tree.cpp  tree.h  value.h  world.cpp  world.h
src/graphics/: camera.cpp  camera.h  filter.cpp  filter.h  filter_black_level.cpp  filter_black_level.h  filter_color_curves.cpp  filter_color_curves.h  filter_custom.cpp  filter_custom.h  framebuffer.cpp  framebuffer.h  geometry.cpp  geometry.h  gl_window.h  gles_gpu_buffer.cpp  gles_gpu_buffer.h  gles_renderer.h  gles_texture_image.cpp  gles_texture_image.h  gpu_buffer.cpp  gpu_buffer.h  object.cpp  object.h  object_library.cpp  object_library.h  opengl_gpu_buffer.cpp  opengl_gpu_buffer.h  opengl_renderer.h  opengl_texture_image.cpp  opengl_texture_image.h  profiler_gl.h  programSources.h  readme.md  renderer.cpp  renderer.h  rendering_context.cpp  rendering_context.h  shader.cpp  shader.h  (+15 more)
src/image/: image.cpp  image.h  image_ffmpeg.cpp  image_ffmpeg.h  image_gphoto.cpp  image_gphoto.h  image_list.cpp  image_list.h  image_ndi.cpp  image_ndi.h  image_opencv.cpp  image_opencv.h  image_sequence.h  image_sh4lt.cpp  image_sh4lt.h  image_shmdata.cpp  image_shmdata.h  image_shmv.cpp  image_shmv.h  image_v4l2.cpp  image_v4l2.h  queue.cpp  queue.h
src/mesh/: mesh.cpp  mesh.h  mesh_bezierpatch.cpp  mesh_bezierpatch.h  mesh_depthmap.cpp  mesh_depthmap.h  mesh_shmdata.cpp  mesh_shmdata.h  meshloader.h
src/network/: channel.h  channel_shmdata.cpp  channel_shmdata.h  channel_zmq.cpp  channel_zmq.h  link.cpp  link.h
src/shaders/: geometric_calibration_filter.frag  mesh_preview_shader.frag  mesh_preview_shader.geom
src/sink/: sink.cpp  sink.h  sink_sh4lt.cpp  sink_sh4lt.h  sink_sh4lt_encoded.cpp  sink_sh4lt_encoded.h  sink_shmdata.cpp  sink_shmdata.h  sink_shmdata_encoded.cpp  sink_shmdata_encoded.h
src/sound/: listener.cpp  listener.h  ltcclock.cpp  ltcclock.h  sound_engine.cpp  sound_engine.h  speaker.cpp  speaker.h
src/userinput/: userinput.cpp  userinput.h  userinput_dragndrop.cpp  userinput_dragndrop.h  userinput_joystick.cpp  userinput_joystick.h  userinput_keyboard.cpp  userinput_keyboard.h  userinput_mouse.cpp  userinput_mouse.h
src/utils/: cgutils.cpp  cgutils.h  dense_deque.h  dense_map.h  dense_set.h  files.h  jsonutils.cpp  jsonutils.h  log.h  osutils.h  resizable_array.h  scope_guard.h  subprocess.cpp  subprocess.h  timer.h  uuid.cpp  uuid.h
tests/: CMakeLists.txt  Makefile.am  build_cppcheck.sh  check_attributeFunctor.cpp  check_attributefunctor.cpp  check_base_object.cpp  check_dense_deque.cpp  check_dense_map.cpp  check_gui.cpp  check_image.cpp  check_mesh.cpp  check_object.cpp  check_resizableArray.cpp  check_scene.cpp  check_serialization.cpp  check_tree.cpp  check_upgrade_configuration.cpp  check_value.cpp  check_world.cpp  integrationTests.json  integrationTests_project.json  integration_tests.py  perf_dense_map.cpp  unitTests.cpp
tests/data/: sample_blender_scene.json  sample_scene_0.0.0.json  sample_scene_0.10.0.json  sample_scene_0.7.15.json  sample_scene_0.7.21.json  sample_scene_0.8.17.json  splashrc.json
tests/integration_tests/: integrationTests.json  integrationTests_project.json  integration_tests.py
tests/packaging/: xyz.splashmapper.Splash.json
tests/performance_tests/: perf_dense_map.cpp  perf_sh4lt.cpp  perf_shmdata.cpp  perf_zmq_inproc.cpp
tests/pytests/: image_v4l2.py  object_linking.py  project.py  replaceImage.py  replace_image.py  video_codecs.py  virtual_probe.py  wrapped_sink.py
tests/sandbox/: README.md  datapath_freeze_on_connection_change.cpp
tests/unit_tests/: all_attributes.cpp  unitTests.cpp
tools/: Makefile.am  build_windows  inflame.sh  info2md.py  make_authors_from_git.sh  package_ubuntu.py  profile_flamegraph.sh  release_version.py  splash-check-calibration.cpp  stage_version.py
tools/docker/: Dockerfile  build_package.sh  docker-compose.yml  (+3 more)
(+340 files in other folders)
