SUBDIRS = templates

datasdir = $(datadir)/splash/
datas_DATA = \
	3d_marker.obj \
	2d_marker.obj \
	camera.obj \
	color_map.png \
	cubes.obj \
	plane.obj \
	sphere.obj \
	splash.json \
	templates.txt

EXTRA_DIST = \
	3d_marker.obj \
	2d_marker.obj \
	camera.obj \
	color_map.png \
	cubes.obj \
	plane.obj \
	sphere.obj \
	splash.json \
	templates.txt
